# ciftty

./: .gitignore  Cargo.toml  CeGa2.cif  README.md  U3Te4.cif  ciftty_terminal_3d_tui_spec.md
src/: app.rs  cif.rs  main.rs  model.rs  spacegroup.rs  xrd.rs
